--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Event Hunters</string>
     <string name="action_settings">Settings</string>
+    <string name="parse_add_id">iiMH8V4SUY3VmPvK6kWOWx7nRoEYmeCbaKaWJBwg</string>
+    <string name="parse_client_key">jz2yTIOng82yEnO50NsZC63dALXSzSi3DR2U3z6b</string>
 </resources>
