--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="action_settings">Settings</string>
     <string name="parse_add_id">iiMH8V4SUY3VmPvK6kWOWx7nRoEYmeCbaKaWJBwg</string>
     <string name="parse_client_key">jz2yTIOng82yEnO50NsZC63dALXSzSi3DR2U3z6b</string>
+
+
+        <string-array name="spinnerItems">
+            <item>Genre</item>
+            <item>Party</item>
+            <item>Chilaxing</item>
+            <item>Cooking Food</item>
+        </string-array>
+    
 </resources>
