--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,13 @@
     <string name="parse_client_key">jz2yTIOng82yEnO50NsZC63dALXSzSi3DR2U3z6b</string>
 
 
-        <string-array name="spinnerItems">
-            <item>Genre</item>
-            <item>Party</item>
-            <item>Chilaxing</item>
-            <item>Cooking Food</item>
-        </string-array>
+    <string-array name="spinnerItems">
+        <item>Genre</item>
+        <item>Party</item>
+        <item>Chilaxing</item>
+        <item>Cooking Food</item>
+    </string-array>
+    <string name="title_activity_events">EventsActivity</string>
+    <string name="title_this_week">This Week</string>
 
 </resources>
