--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Event Hunters</string>
+    <string name="app_name">Nick Test</string>
     <string name="action_settings">Settings</string>
     <string name="parse_add_id">iiMH8V4SUY3VmPvK6kWOWx7nRoEYmeCbaKaWJBwg</string>
     <string name="parse_client_key">jz2yTIOng82yEnO50NsZC63dALXSzSi3DR2U3z6b</string>
@@ -14,6 +14,6 @@
     </string-array>
     <string name="title_activity_events">EventsActivity</string>
     <string name="title_this_week">This Week</string>
-
+    <string name="upcoming_events"><u>Upcoming Events</u></string>
 
 </resources>
