--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
+
+    <!-- Utilized in createevent.xm. -->
     <string name="app_name">Nick Test</string>
     <string name="action_settings">Settings</string>
     <string name="parse_add_id">iiMH8V4SUY3VmPvK6kWOWx7nRoEYmeCbaKaWJBwg</string>
     <string name="parse_client_key">jz2yTIOng82yEnO50NsZC63dALXSzSi3DR2U3z6b</string>
     <string name="eventName">Name:</string>
-
 
     <string-array name="spinnerItems">
         <item>Genre</item>
@@ -35,4 +36,6 @@
     <string name="genre_label">Genre:</string>
     <string name="event_genre">Music</string>
 
+    <!-- Utilized in attendingevents.xml-->
+    <string name="event_find">Find Events</string>
 </resources>
